HW_Kubernetes/8/deployment_z2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-z2
  labels:
    app: dep_z2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dep_z2
  template:
    metadata:
      labels:
        app: dep_z2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        - containerPort: 443
          name: https-port
        volumeMounts:
        - name: api-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: api-html
        configMap:
          name: api-html
