HW_Kubernetes/8/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dep-svc
spec:
  selector:
    app: dep_z1
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
    - name: multitool
      protocol: TCP
      port: 1000
      targetPort: 1000
