HW_Kubernetes/8/svc_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: dep-svc
spec:
  selector:
    app: dep_z2
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30100
  type: NodePort
